--- a/application/static/css/map.css
+++ b/application/static/css/map.css
@@ -34,6 +34,8 @@
             input#place {
                 height: 100%;
                 width: 100%;
+                border: none;
+                background-color: var(--input-bg-color);
             }
 
             label {
