Better filters and more data
Added pop density and altitude

--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -192,6 +192,16 @@ tr:first-child > th {
     border-bottom: 1px solid var(--border-color);
 }
 
+.noUi-connect {
+    background-color: var(--accent);
+}
+.noUi-tooltip {
+    font-size: .8rem;
+    border: none;
+    background-color: inherit;
+    padding: 0;
+}
+
 
 /* LOADING | NO RESULT */
 
