--- a/application/static/css/table.css
+++ b/application/static/css/table.css
@@ -4,8 +4,19 @@
     align-items: center;
     margin-bottom: 1rem;
 
-    .state {
+    .state, .year {
         margin-right: 1rem;
+    }
+
+    .density {
+
+        display: flex;
+        gap: .4rem;
+
+        #density-slider {
+            margin: 0px 1rem;
+            width: 120px;
+        }
     }
 
     #count {
