Altitude filter slider

--- a/application/templates/map.html
+++ b/application/templates/map.html
@@ -97,8 +97,12 @@
                             </select>
                         </div>
                         <div class="density">
-                            <label for="year">Densité de population</label>
+                            <label for="density-slider">Densité de pop</label>
                             <div id="density-slider"></div>
+                        </div>
+                        <div class="altitude">
+                            <label for="altitude-slider">Altitude</label>
+                            <div id="altitude-slider"></div>
                         </div>
                         <div id="count">
                             <p>--</p>
