--- a/application/static/css/table.css
+++ b/application/static/css/table.css
@@ -8,13 +8,13 @@
         margin-right: 1rem;
     }
 
-    .density {
+    .density, .altitude {
 
         display: flex;
         gap: .4rem;
 
-        #density-slider {
-            margin: 0px 1rem;
+        #density-slider, #altitude-slider {
+            margin: 0px 2rem 0 1rem;
             width: 120px;
         }
     }
