--- a/web/application/static/css/map.css
+++ b/web/application/static/css/map.css
@@ -79,6 +79,12 @@
         overflow: hidden;
     }
 
+    .leaflet-popup-content ul > li {
+        list-style: inside;
+        padding: 2px;
+        margin: inherit;
+    }
+
     .custom-map-cta {
         z-index: 9999;
         background-color: var(--bg-color-second);
@@ -150,4 +156,7 @@
 }
 #map.fetching .fetching {
     display: block;
+}
+#map[data-map-type="points"] .map-value-container{
+    display: none;
 }
