Moved filters and volume

--- a/web/application/templates/statistics.html
+++ b/web/application/templates/statistics.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/predict.css') }}">
     <!-- <link rel="icon" type="" href="{{ url_for('static', filename='images/favicon.jpg') }}"> -->
-    <title>France Energie - Prédictions DPE et Consomation</title>
+    <title>France Energie - Statistique Dashboard</title>
 </head>
 
 {% include "elements/header.html" %}
