--- a/web/application/templates/predict.html
+++ b/web/application/templates/predict.html
@@ -23,18 +23,18 @@
         <div class="content-wrapper">
             <div class="content decisiontree">
                 <section>
-                    <h1>Etiquette DPE</h1>
+                    <h1>Informations du logement</h1>
                     <form action="">
-                        <div class="input">
+                        <div class="form-input">
                             <label for="value1">Valeur 1</label>
                             <input type="text" name="value1" id="value1" placeholder="Exemple de valeur">
                         </div>
                         <div class="input-group">
-                            <div class="input">
+                            <div class="form-input">
                                 <label for="value2">Valeur 2</label>
                                 <input type="text" name="value2" id="value2" placeholder="Exemple de valeur">
                             </div>
-                            <div class="input">
+                            <div class="form-input">
                                 <label for="value3">Valeur 3</label>
                                 <input type="text" name="value3" id="value3" placeholder="Exemple de valeur">
                             </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="content regression">
                 <section>
-                    <h1>Consomation</h1>
+                    <h1>Prédictions</h1>
                 </section>
             </div>
         </div>
