--- a/web/application/templates/elements/menu.html
+++ b/web/application/templates/elements/menu.html
@@ -36,7 +36,7 @@
             </a>
         </li>
         <li>
-            <a href="/about">
+            <a href="https://github.com/marinoo3/m2_enedis">
                 <img src="{{ url_for('static', filename='images/info.svg') }}" alt="about icon" height="28px">
                 <p>A propos</p>
                 <div class="highlighter"></div>
