--- a/web/application/templates/predict.html
+++ b/web/application/templates/predict.html
@@ -6,6 +6,8 @@
     <!-- <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="Marin NAGY"> -->
+     <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/predict.css') }}">
@@ -24,6 +26,7 @@
             <div class="content decisiontree">
                 <section>
                     <h1>Informations du logement</h1>
+                    <div id="map"></div>
                     <form action="">
                         <div class="form-input">
                             <label for="value1">Valeur 1</label>
@@ -51,8 +54,11 @@
         </div>
     </main>
 
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <!-- Custom JS -->
 <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
+<script src="{{ url_for('static', filename='js/predict.js') }}"></script>
 
 </body>
 </html>
